--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <link rel="stylesheet" href="styles.css">
+    <!-- <link rel="stylesheet" href="styles.css"> -->
 
     <title>Food Recipe Finder</title>
 
@@ -97,7 +97,7 @@
 
     </div> <!-- container -->
 
-    <script src="script.js"></script>
+    <script src="../dist/js/bundle.js"></script>
 </body>
 
 </html>
