--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
 
                 </button>
 
-            </form> <!-- form -->
+            </form> <!-- Search form -->
 
             <div class="favourites">
 
