Implemented the renderResults function.

--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
 
             <ul class="results__list">
 
-                <li></li>
+                <!-- results of renderResults() are inserted here -->
 
             </ul><!-- results__list -->
 
@@ -88,8 +88,6 @@
             <h2 class="heading-2">Shopping List</h2>
 
             <ul class="shopping__list">
-
-                <li></li>
 
             </ul><!-- shopping__list -->
 
