--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <!-- <link rel="stylesheet" href="styles.css"> -->
+    <link rel="stylesheet" href="/css/styles.css">
 
     <title>Food Recipe Finder</title>
 
@@ -21,7 +21,7 @@
 
         <header class="header">
 
-            <!-- Logo here -->
+            <img src="img/logo.png" alt="Logo" class="header__logo">
 
             <form class="search">
 
@@ -63,6 +63,8 @@
 
         <div class="results">
 
+            <!-- Loader is rendered here -->
+
             <ul class="results__list">
 
                 <!-- results of renderResults() are inserted here -->
@@ -90,6 +92,11 @@
             <ul class="shopping__list">
 
             </ul><!-- shopping__list -->
+
+            <div class="powered">
+                Powered by
+                <a href="https://forkify-api.herokuapp.com/" target="_blank" class="link">forkify-api.herokuapp.com</a>.
+            </div>
 
         </div> <!-- shopping -->
 
