--- a/src/index.html
+++ b/src/index.html
@@ -73,6 +73,8 @@
 
             <div class="results__pages">
 
+                <!-- Pagination buttons are inserted here -->
+
             </div><!-- results__pages -->
 
         </div> <!-- results -->
