Implemented Recipe view.

--- a/src/index.html
+++ b/src/index.html
@@ -83,6 +83,8 @@
 
         <div class="recipe">
 
+            <!-- Recipe view is inserted here -->
+
         </div> <!-- recipe -->
 
         <!-- ---------------------------------- -->
