Implemented the shopping list View.

--- a/src/index.html
+++ b/src/index.html
@@ -95,6 +95,8 @@
 
             <ul class="shopping__list">
 
+                <!-- Shopping list view is inserted here -->
+
             </ul><!-- shopping__list -->
 
             <div class="powered">
