Implemented the shopping list Controller.

--- a/src/index.html
+++ b/src/index.html
@@ -37,25 +37,29 @@
 
             </form> <!-- Search form -->
 
-            <div class="favourites">
+            <div class="likes">
 
-                <div class="favourites__field">
+                <div class="likes__field">
 
-                    <!-- favourites icon here -->
+                    <svg class="likes__icon">
 
-                </div><!-- favourites__field -->
+                        <use href="img/icons.svg#icon-heart"></use>
+                        
+                    </svg>
 
-                <div class="favourites__panel">
+                </div><!-- likes__field -->
 
-                    <ul class="favourites__list">
+                <div class="likes__panel">
+
+                    <ul class="likes__list">
 
                         <li></li>
 
-                    </ul><!-- favourites__list -->
+                    </ul><!-- likes__list -->
 
-                </div> <!-- favourites__panel -->
+                </div> <!-- likes__panel -->
 
-            </div><!-- favourites -->
+            </div><!-- likes -->
 
         </header> <!-- header -->
 
