Implemented the Likes Controller and the Likes View.

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
 
                 </button>
 
-            </form> <!-- Search form -->
+            </form>
 
             <div class="likes">
 
@@ -44,26 +44,24 @@
                     <svg class="likes__icon">
 
                         <use href="img/icons.svg#icon-heart"></use>
-                        
+
                     </svg>
 
-                </div><!-- likes__field -->
+                </div>
 
                 <div class="likes__panel">
 
                     <ul class="likes__list">
 
-                        <li></li>
+                        <!-- Liked recipes are inserted here -->
 
-                    </ul><!-- likes__list -->
+                    </ul>
 
-                </div> <!-- likes__panel -->
+                </div>
 
-            </div><!-- likes -->
+            </div>
 
-        </header> <!-- header -->
-
-        <!-- ---------------------------------- -->
+        </header>
 
         <div class="results">
 
@@ -73,25 +71,21 @@
 
                 <!-- results of renderResults() are inserted here -->
 
-            </ul><!-- results__list -->
+            </ul>
 
             <div class="results__pages">
 
                 <!-- Pagination buttons are inserted here -->
 
-            </div><!-- results__pages -->
+            </div>
 
-        </div> <!-- results -->
-
-        <!-- ---------------------------------- -->
+        </div>
 
         <div class="recipe">
 
-            <!-- Recipe view is inserted here -->
+            <!-- Recipe view is rendered here -->
 
-        </div> <!-- recipe -->
-
-        <!-- ---------------------------------- -->
+        </div>
 
         <div class="shopping">
 
@@ -99,18 +93,18 @@
 
             <ul class="shopping__list">
 
-                <!-- Shopping list view is inserted here -->
+                <!-- Shopping list view is rendered here -->
 
-            </ul><!-- shopping__list -->
+            </ul>
 
             <div class="powered">
                 Powered by
                 <a href="https://forkify-api.herokuapp.com/" target="_blank" class="link">forkify-api.herokuapp.com</a>.
             </div>
 
-        </div> <!-- shopping -->
+        </div>
 
-    </div> <!-- container -->
+    </div>
 
 </body>
 
